--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,4 +1,5 @@
 [options]
+; .env non scrive su odoo.conf, quindi non posso inserire qui queste variabili
 ; admin_passwd = ${ADMIN_PASSWORD}    ; Password per accedere alla pagina di gestione database di Odoo
 ;
 ; db_password = ${DB_PASSWORD}        ; Password dell’utente del database
