--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -1,12 +1,5 @@
 [options]
-; .env non scrive su odoo.conf, quindi non posso inserire qui queste variabili
-; admin_passwd = ${ADMIN_PASSWORD}    ; Password per accedere alla pagina di gestione database di Odoo
-;
-; db_password = ${DB_PASSWORD}        ; Password dell’utente del database
-; db_user = ${DB_USER}                ; Utente del database
-;
-; db_host = ${DB_HOST}                ; Host del database PostgreSQL (qui è il servizio "db" del docker-compose)
-; db_port = ${DB_PORT}                ; Porta del database PostgreSQL (default PostgreSQL = 5432)
+admin_passwd = CHANGE_ME
 
 ; Limite massimo di CPU (in secondi) per una singola richiesta
 limit_time_cpu = 900
