--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -10,6 +10,5 @@ limit_time_real = 900
 ; Percorsi dove Odoo cerca i moduli:
 ; - /usr/lib/python3/dist-packages/odoo/addons → moduli core
 ; - /mnt/extra-addons → moduli custom montati da host
-addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons
-
+addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons,/mnt/cyberfolk-addons/odoo_utility,mnt/cyberfolk-addons/odoo_ded
 ; log_level = info
