--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -12,3 +12,7 @@ limit_time_real = 900
 ; - /mnt/extra-addons → moduli custom montati da host
 addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons,/mnt/cyberfolk-addons/odoo_utility,mnt/cyberfolk-addons/odoo_ded
 ; log_level = info
+
+proxy_mode = True
+workers = 2
+longpolling_port = 8072
