--- a/config/odoo.conf
+++ b/config/odoo.conf
@@ -15,4 +15,4 @@ addons_path = /usr/lib/python3/dist-packages/odoo/addons,/mnt/extra-addons,/mnt/
 
 proxy_mode = True
 workers = 2
-longpolling_port = 8072
+gevent_port = 8072
